--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,9 @@
     <h2>TNC Data</h2>
     <div id="tncData"></div>
 
+    <label for="toggleHighlight">Highlight Enable:</label>
+    <input type="checkbox" id="toggleHighlight">
+
     <script src="/static/app.js"></script>
 </body>
 </html>
