--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@
                 <th>Port Num</th>
                 <th>Firmware Version</th>
                 <th>Kaup8R</th>
-                <th>Uptime (ms)</th>
+                <th>Uptime</th>
                 <th>Board ID</th>
                 <th>Switch Positions</th>
                 <th>Config Mode</th>
@@ -27,8 +27,8 @@
                 <th>Transmit Packets</th>
                 <th>Preamble Word Count</th>
                 <th>Main Loop Cycle Count</th>
-                <th>PTT On Time (ms)</th>
-                <th>DCD On Time (ms)</th>
+                <th>PTT On Time</th>
+                <th>DCD On Time</th>
                 <th>Received Data Bytes</th>
                 <th>Transmit Data Bytes</th>
                 <th>FEC Bytes Corrected</th>
