--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
+  <main>
     <h1>TARPN Monitor</h1>
     <pre id="output"></pre>
 
@@ -47,7 +48,12 @@
     <div id=portFiltersContainer class="port-checkbox-group">
       No ports detected yet.
     </div>
+  </main>
 
-    <script src="/static/app.js"></script>
+  <footer>
+    <span id="version-placeholder"></span>
+  </footer>
+
+  <script src="/static/app.js"></script>
 </body>
 </html>
