--- a/static/index.html
+++ b/static/index.html
@@ -8,150 +8,8 @@
 </head>
 <body>
     <div id="app">
-        <main>
-            <h1>TARPN Monitor</h1>
-            <div id="output-container">
-                <div v-if="logMessages.length === 0" class="empty-log-placeholder">Waiting for messages...</div>
-                <div v-for="(msg, index) in logMessages" :key="index" class="logline"
-                     :class="[
-                         msg.prefix ? 'prefix-' + msg.prefix : '',
-                         msg.port ? 'port-' + msg.port : '',
-                         isHidden(msg) ? 'hidden' : ''
-                     ]"
-                     :data-port="msg.port"
-                     :data-route="msg.route"
-                     @mouseover="showTooltip(msg, $event)"
-                     @mouseout="hideTooltip()"
-                     @click="handleLogLineClick(msg, $event)">
-                    <span class="time">{{ msg.displayTimestamp }}</span>&nbsp;
-                    <template v-if="msg.raw">
-                        <span class="raw-message">{{ msg.raw }}</span>
-                    </template>
-                    <template v-else>
-                        <span :class="msg.prefix">{{ msg.prefix }}x Port={{ msg.port }}</span>&nbsp;
-                        <span class="msg" :style="{ color: msg.routeColor }">{{ msg.route }} <span class="message-content" v-html="msg.message"></span></span>
-                    </template>
-                </div>
-            </div>
-
-            <h2>Message Rate (Messages per Minute)</h2>
-            <div id="messageRateGraph" class="graph-container">
-                <div v-if="!displayedGraphData || displayedGraphData.length === 0 || displayedGraphData.every(bar => bar.count === 0)" class="empty-graph-placeholder">Waiting for data...</div>
-                <div v-else v-for="(barData, index) in displayedGraphData" :key="barData.minuteKey || index" class="graph-bar-container">
-                    <div class="graph-bar" :title="barData.label + ': ' + barData.count + ' message' + (barData.count === 1 ? '' : 's')" :style="{ height: Math.min(100, barData.count) + 'px' }"></div>
-                </div>
-            </div>
-
-            <h2>TNC Data</h2>
-            <table id="tncDataTable">
-                <thead>
-                    <tr>
-                        <th>Port Num</th>
-                        <th>Firmware Version</th>
-                        <th>KAUP8R</th>
-                        <th>Uptime</th>
-                        <th>Board ID</th>
-                        <th>Switch Positions</th>
-                        <th>Config Mode</th>
-                        <th>AX.25 Rx</th>
-                        <th>IL2P Ok</th>
-                        <th>IL2P Err</th>
-                        <th>Tx Packets</th>
-                        <th>Preamble</th>
-                        <th>Main Loop</th>
-                        <th>PTT On</th>
-                        <th>DCD On</th>
-                        <th>Rx Bytes</th>
-                        <th>Tx Bytes</th>
-                        <th>FEC Corrected</th>
-                    </tr>
-                </thead>
-                <tbody id="tncDataBody">
-                    <tr v-if="Object.keys(tncData).length === 0">
-                        <td :colspan="18" style="text-align: center;">No TNC data received yet.</td>
-                    </tr>
-                    <tr v-for="(data, port) in sortedTncData" :key="port">
-                        <td>{{ port }}</td>
-                        <td>{{ data.firmwareVersion }}</td>
-                        <td>{{ data.kaup8r }}</td>
-                        <td>{{ data.uptime }}</td>
-                        <td>{{ data.boardId }}</td>
-                        <td>{{ data.switchPositions }}</td>
-                        <td>{{ data.configMode }}</td>
-                        <td>{{ data.ax25ReceivedPackets }}</td>
-                        <td>{{ data.il2pCorrectablePackets }}</td>
-                        <td>{{ data.il2pUncorrectablePackets }}</td>
-                        <td>{{ data.transmitPackets }}</td>
-                        <td>{{ data.preambleWordCount }}</td>
-                        <td>{{ data.mainLoopCycleCount }}</td>
-                        <td>{{ data.pttOnTime }}</td>
-                        <td>{{ data.dcdOnTime }}</td>
-                        <td>{{ data.receivedDataBytes }}</td>
-                        <td>{{ data.transmitDataBytes }}</td>
-                        <td>{{ data.fecBytesCorrected }}</td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <h3>Settings</h3>
-            <label for="toggleAutoScroll" title="Enable or disable automatic scrolling of the log output. When enabled, the log will scroll to the newest message.">Auto-scroll:</label>
-            <input type="checkbox" id="toggleAutoScroll" v-model="autoScrollEnabled" title="Enable or disable automatic scrolling of the log output. When enabled, the log will scroll to the newest message."><br/>
-            <label for="toggleHideUSB" title="Hide messages that are routed from the TNC to the USB interface. Useful for focusing on over-the-air packets.">Hide TNC&gt;USB Packets:</label>
-            <input type="checkbox" id="toggleHideUSB" v-model="hideUSBRoutes" title="Hide messages that are routed from the TNC to the USB interface. Useful for focusing on over-the-air packets."><br/>
-            <label for="toggleAX25Tooltip" title="Enable or disable the AX.25 packet details tooltip on hover.">Enable AX.25 Tooltip:</label>
-            <input type="checkbox" id="toggleAX25Tooltip" v-model="ax25TooltipEnabled" title="Enable or disable the AX.25 packet details tooltip on hover."><br/>
-            
-            <h4>Port Filters</h4>
-            <div id="portFiltersContainer" class="port-checkbox-group">
-                <span v-if="uniquePorts.length === 0">No ports detected yet.</span>
-                <div v-for="port in sortedUniquePorts" :key="port" class="port-checkbox-item">
-                    <label :for="'port-' + port + '-checkbox'" :title="'Show or hide messages from port ' + port">Port {{ port }}:</label>
-                    <input type="checkbox" :id="'port-' + port + '-checkbox'" :value="port" v-model="visiblePorts" :title="'Show or hide messages from port ' + port">
-                </div>
-            </div>
-        </main>
-
-        <footer>
-            <span id="version-placeholder">Version: {{ version }}</span>
-        </footer>
-
-    <!-- AX.25 Tooltip -->
-    <div id="ax25-tooltip" class="ax25-tooltip" v-show="tooltip.visible" :style="{ top: tooltip.y + 'px', left: tooltip.x + 'px' }" @click.stop>
-        <div v-if="tooltip.data && tooltip.data.source"> 
-            <h4>AX.25 Packet Details</h4>
-            <p>
-                <strong>From:</strong> {{ tooltip.data.source.call }}{{ tooltip.data.source.ssid ? '-' + tooltip.data.source.ssid : '' }}
-                <strong>To:</strong> {{ tooltip.data.destination.call }}{{ tooltip.data.destination.ssid ? '-' + tooltip.data.destination.ssid : '' }}
-            </p>
-            <p><strong>Frame Type:</strong> {{ tooltip.data.frameType }}</p>
-            <p v-if="tooltip.data.frameTypeExplanation"><em>{{ tooltip.data.frameTypeExplanation }}</em></p>
-
-            <template v-if="tooltip.data.controlRaw">
-                <p><strong>Control Field:</strong> <code>{{ tooltip.data.controlRaw }}</code></p>
-                <p v-if="tooltip.data.controlDetails && tooltip.data.controlDetails.detailsString"><em>Details: {{ tooltip.data.controlDetails.detailsString }}</em></p>
-            </template>
-            <template v-else>
-                <p><em>No standard control field present.</em></p>
-            </template>
-
-            <p v-if="tooltip.data.pid">
-                <strong>PID:</strong> {{ tooltip.data.pid }}
-                <em v-if="tooltip.data.pidExplanation"> ({{ tooltip.data.pidExplanation }})</em>
-            </p>
-            <p v-if="tooltip.data.protocol"><strong>L3 Protocol:</strong> {{ tooltip.data.protocol }}</p>
-            <div v-if="tooltip.data.info && tooltip.data.info.trim() !== '' && tooltip.data.info.trim() !== ':'">
-                <p><strong>Information:</strong></p>
-                <pre>{{ tooltip.data.info }}</pre>
-            </div>
-        </div>
-        <div v-else>
-            <!-- Fallback or placeholder if tooltip.data is not fully populated but tooltip is visible -->
-            <p>Parsing AX.25 details...</p>
-        </div>
+        <!-- Vue app will be mounted here by static/js/dist/main.js -->
     </div>
-    </div>
-
-    <script src="/static/js/vue.global.js"></script>
-    <script src="/static/js/app.vue.js"></script>
+    <script src="/static/js/dist/main.js"></script>
 </body>
 </html>
